03-trivy-k8s/test-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: trivy-system
spec:
  parentRefs:
    - name: gateway-lab
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: ^/.*\.(js|css|svg|ico)$
      backendRefs:
        - name: trivy-operator-dashboard
          port: 8900
